@@ -25,7 +25,7 @@ MailScanner
     (test after one week again with quarantine purging)
   Run Successful Lint tests PASSED
   Verify presence of needed perl modules PASSED
-  (check for perl-LDAP and Mail-IMAPClient -- build if needed) FAILED -- need Mail-IMAPClient
+  (check for perl-LDAP and Mail-IMAPClient -- build if needed) FAILED -- need Mail-IMAPClient?
   Verify that quarantined attachements can be released from localhost
 MailWatch
   Verify version shows on login screen PASSED
