@@ -17,6 +17,8 @@ Issue #287  Regression      - Rules without Descriptions (removed from beta)
 Issue #294  Bug             - Attachment Release Issues in MailWatch
 Issue #297  Bug             - KAM.cf URL needs updated
 
+Sought Rules dropped (no longer maintained)
+
 ############################################################
 
 ############################################################
